T3/target/generated-sources/antlr4/org/ufscar/compiladores/GrammarT3Parser.java
// Generated from org/ufscar/compiladores/GrammarT3.g4 by ANTLR 4.13.1
package org.ufscar.compiladores;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GrammarT3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, OP_ARIT1=47, OP_ARIT2=48, OP_ARIT3=49, OP_REL=50, OP_BOOL_OU=51, 
		OP_BOOL_E=52, IDENT=53, NUMINT=54, NUMREAL=55, CADEIA=56, COMENTARIO=57, 
		WS=58, CADEIANAOFECHADA=59, COMENTARIONAOFECHADO=60, ERRO=61;
	public static final int
		RULE_programa = 0, RULE_declaracoes = 1, RULE_declaracaoLocal = 2, RULE_declaracaoGlobal = 3, 
		RULE_variavel = 4, RULE_identificador = 5, RULE_dimensao = 6, RULE_tipo = 7, 
		RULE_tipoBasico = 8, RULE_tipoBasicoIdentificador = 9, RULE_tipoEstendido = 10, 
		RULE_valorConstante = 11, RULE_registro = 12, RULE_parametro = 13, RULE_parametros = 14, 
		RULE_corpo = 15, RULE_comando = 16, RULE_itemSelecao = 17, RULE_constantes = 18, 
		RULE_numero = 19, RULE_expAritmetica = 20, RULE_termo = 21, RULE_fator = 22, 
		RULE_paridade = 23, RULE_parcela = 24, RULE_parcelaUnitaria = 25, RULE_parcelaNaoUnitaria = 26, 
		RULE_expRelacional = 27, RULE_expressao = 28, RULE_termoLogico = 29, RULE_fatorLogico = 30, 
		RULE_parcelaLogica = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracoes", "declaracaoLocal", "declaracaoGlobal", "variavel", 
			"identificador", "dimensao", "tipo", "tipoBasico", "tipoBasicoIdentificador", 
			"tipoEstendido", "valorConstante", "registro", "parametro", "parametros", 
			"corpo", "comando", "itemSelecao", "constantes", "numero", "expAritmetica", 
			"termo", "fator", "paridade", "parcela", "parcelaUnitaria", "parcelaNaoUnitaria", 
			"expRelacional", "expressao", "termoLogico", "fatorLogico", "parcelaLogica"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'algoritmo'", "'fim_algoritmo'", "'declare'", "'constante'", "':'", 
			"'tipo'", "'procedimento'", "'('", "')'", "'fim_procedimento'", "'funcao'", 
			"'fim_funcao'", "','", "'.'", "'['", "']'", "'literal'", "'inteiro'", 
			"'real'", "'logico'", "'^'", "'verdadeiro'", "'falso'", "'registro'", 
			"'fim_registro'", "'var'", "'leia'", "'escreva'", "'se'", "'entao'", 
			"'senao'", "'fim_se'", "'caso'", "'seja'", "'fim_caso'", "'para'", "'<-'", 
			"'ate'", "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", "'retorne'", 
			"'..'", "'&'", "'nao'", null, null, "'%'", null, "'ou'", "'e'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "OP_ARIT1", 
			"OP_ARIT2", "OP_ARIT3", "OP_REL", "OP_BOOL_OU", "OP_BOOL_E", "IDENT", 
			"NUMINT", "NUMREAL", "CADEIA", "COMENTARIO", "WS", "CADEIANAOFECHADA", 
			"COMENTARIONAOFECHADO", "ERRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarT3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarT3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarT3Parser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			declaracoes();
			setState(65);
			match(T__0);
			setState(66);
			corpo();
			setState(67);
			match(T__1);
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracoesContext extends ParserRuleContext {
		public List<DeclaracaoLocalContext> declaracaoLocal() {
			return getRuleContexts(DeclaracaoLocalContext.class);
		}
		public DeclaracaoLocalContext declaracaoLocal(int i) {
			return getRuleContext(DeclaracaoLocalContext.class,i);
		}
		public List<DeclaracaoGlobalContext> declaracaoGlobal() {
			return getRuleContexts(DeclaracaoGlobalContext.class);
		}
		public DeclaracaoGlobalContext declaracaoGlobal(int i) {
			return getRuleContext(DeclaracaoGlobalContext.class,i);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitDeclaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitDeclaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2264L) != 0)) {
				{
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
				case T__3:
				case T__5:
					{
					setState(70);
					declaracaoLocal();
					}
					break;
				case T__6:
				case T__10:
					{
					setState(71);
					declaracaoGlobal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoLocalContext extends ParserRuleContext {
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarT3Parser.IDENT, 0); }
		public TipoBasicoContext tipoBasico() {
			return getRuleContext(TipoBasicoContext.class,0);
		}
		public TerminalNode OP_REL() { return getToken(GrammarT3Parser.OP_REL, 0); }
		public ValorConstanteContext valorConstante() {
			return getRuleContext(ValorConstanteContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DeclaracaoLocalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoLocal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterDeclaracaoLocal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitDeclaracaoLocal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitDeclaracaoLocal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoLocalContext declaracaoLocal() throws RecognitionException {
		DeclaracaoLocalContext _localctx = new DeclaracaoLocalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracaoLocal);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(T__2);
				setState(78);
				variavel();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(T__3);
				setState(80);
				match(IDENT);
				setState(81);
				match(T__4);
				setState(82);
				tipoBasico();
				setState(83);
				match(OP_REL);
				setState(84);
				valorConstante();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				match(T__5);
				setState(87);
				match(IDENT);
				setState(88);
				match(T__4);
				setState(89);
				tipo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracaoGlobalContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(GrammarT3Parser.IDENT, 0); }
		public CorpoContext corpo() {
			return getRuleContext(CorpoContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TipoEstendidoContext tipoEstendido() {
			return getRuleContext(TipoEstendidoContext.class,0);
		}
		public DeclaracaoGlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracaoGlobal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterDeclaracaoGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitDeclaracaoGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitDeclaracaoGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoGlobalContext declaracaoGlobal() throws RecognitionException {
		DeclaracaoGlobalContext _localctx = new DeclaracaoGlobalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracaoGlobal);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(T__6);
				setState(93);
				match(IDENT);
				setState(94);
				match(T__7);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__25 || _la==IDENT) {
					{
					setState(95);
					parametros();
					}
				}

				setState(98);
				match(T__8);
				setState(99);
				corpo();
				setState(100);
				match(T__9);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(T__10);
				setState(103);
				match(IDENT);
				setState(104);
				match(T__7);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__25 || _la==IDENT) {
					{
					setState(105);
					parametros();
					}
				}

				setState(108);
				match(T__8);
				setState(109);
				match(T__4);
				setState(110);
				tipoEstendido();
				setState(111);
				corpo();
				setState(112);
				match(T__11);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariavelContext extends ParserRuleContext {
		public List<IdentificadorContext> identificador() {
			return getRuleContexts(IdentificadorContext.class);
		}
		public IdentificadorContext identificador(int i) {
			return getRuleContext(IdentificadorContext.class,i);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitVariavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitVariavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariavelContext variavel() throws RecognitionException {
		VariavelContext _localctx = new VariavelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			identificador();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(117);
				match(T__12);
				setState(118);
				identificador();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(T__4);
			setState(125);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentificadorContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(GrammarT3Parser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarT3Parser.IDENT, i);
		}
		public DimensaoContext dimensao() {
			return getRuleContext(DimensaoContext.class,0);
		}
		public IdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitIdentificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitIdentificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentificadorContext identificador() throws RecognitionException {
		IdentificadorContext _localctx = new IdentificadorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identificador);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(IDENT);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(128);
				match(T__13);
				setState(129);
				match(IDENT);
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			dimensao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DimensaoContext extends ParserRuleContext {
		public List<ExpAritmeticaContext> expAritmetica() {
			return getRuleContexts(ExpAritmeticaContext.class);
		}
		public ExpAritmeticaContext expAritmetica(int i) {
			return getRuleContext(ExpAritmeticaContext.class,i);
		}
		public DimensaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterDimensao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitDimensao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitDimensao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DimensaoContext dimensao() throws RecognitionException {
		DimensaoContext _localctx = new DimensaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dimensao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(137);
				match(T__14);
				setState(138);
				expAritmetica();
				setState(139);
				match(T__15);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public RegistroContext registro() {
			return getRuleContext(RegistroContext.class,0);
		}
		public TipoEstendidoContext tipoEstendido() {
			return getRuleContext(TipoEstendidoContext.class,0);
		}
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tipo);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				registro();
				}
				break;
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				tipoEstendido();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoBasicoContext extends ParserRuleContext {
		public TipoBasicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoBasico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterTipoBasico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitTipoBasico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitTipoBasico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoBasicoContext tipoBasico() throws RecognitionException {
		TipoBasicoContext _localctx = new TipoBasicoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tipoBasico);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoBasicoIdentificadorContext extends ParserRuleContext {
		public TipoBasicoContext tipoBasico() {
			return getRuleContext(TipoBasicoContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarT3Parser.IDENT, 0); }
		public TipoBasicoIdentificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoBasicoIdentificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterTipoBasicoIdentificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitTipoBasicoIdentificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitTipoBasicoIdentificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoBasicoIdentificadorContext tipoBasicoIdentificador() throws RecognitionException {
		TipoBasicoIdentificadorContext _localctx = new TipoBasicoIdentificadorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tipoBasicoIdentificador);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
			case T__17:
			case T__18:
			case T__19:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				tipoBasico();
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				match(IDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoEstendidoContext extends ParserRuleContext {
		public TipoBasicoIdentificadorContext tipoBasicoIdentificador() {
			return getRuleContext(TipoBasicoIdentificadorContext.class,0);
		}
		public TipoEstendidoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoEstendido; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).enterTipoEstendido(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarT3Listener ) ((GrammarT3Listener)listener).exitTipoEstendido(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarT3Visitor ) return ((GrammarT3Visitor<? extends T>)visitor).visitTipoEstendido(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoEstendidoContext tipoEstendido() throws RecognitionException {
		TipoEstendidoContext _localctx = new TipoEstendidoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_tipoEstendido);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(156);
				match(T__20);
				}
			}
